# beauty-research-agents_v1

./: .env.example  .gitignore  CLAUDE.md  FILE_INDEX.md  README.md  file_index.md  pyproject.toml  tasks.md
output/: report_20260228_100613.md  report_20260228_214142.md  report_20260301_110614.md  report_20260302_011255.md  report_20260303_005413.md  report_20260303_014509.md  report_20260303_093406.md  report_20260309_062633.md  report_20260328_120000.md  report_20260331_120000.md  report_20260427_120000.md  report_20260427_140000.md  report_20260427_160000.md  report_20260528_120000.md  report_skin_texture_pore_analysis.md  research_summary_table.md
src/: __init__.py  main.py  orchestrator.py
src/agents/: __init__.py  base.py  dermatologist.py  editor.py  evidence.py  gadget.py  global_beauty.py  influencer.py  supplement_pharma.py
src/prompts/: dermatologist.md  editor.md  evidence.md  gadget.md  global_beauty.md  influencer.md  supplement_pharma.md
src/tools/: __init__.py  web_search.py
src/utils/: __init__.py  report_formatter.py
tests/: test_agents.py
