[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beauty-research-agents"
version = "0.1.0"
description = "美容・アンチエイジング特化マルチエージェントリサーチシステム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
beauty-research = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
